--- a/man/ugrep-indexer.1
+++ b/man/ugrep-indexer.1
@@ -1,4 +1,4 @@
-.TH UGREP-INDEXER "1" "May 15, 2025" "ugrep-indexer 7.4.3" "User Commands"
+.TH UGREP-INDEXER "1" "June 18, 2025" "ugrep-indexer 7.5.0" "User Commands"
 .SH NAME
 \fBugrep-indexer\fR -- file indexer to accelerate recursive searching
 .SH SYNOPSIS
@@ -147,8 +147,7 @@ bzip2 (requires suffix .bz, .bz2, .bzip2, .tbz, .tbz2, .tb2, .tz2),
 lzma and xz (requires suffix .lzma, .tlz, .xz, .txz),
 lz4 (requires suffix .lz4),
 zstd (requires suffix .zst, .zstd, .tzst),
-brotli (requires suffix .br),
-bzip3 (requires suffix .bz3).
+brotli (requires suffix .br).
 .TP
 \fB\-\-zmax\fR=\fINUM\fR
 When used with option \fB\-z\fR (\fB\-\-decompress\fR), indexes the contents of
